--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,5 @@
+@use "./helpers/mixins" as *;
+
 /* Global [Start] */
 *,
 *::before,
@@ -9,7 +11,7 @@
 
 *::before,
 *::after {
-  content: "";
+  content: '';
   position: absolute;
 }
 
@@ -26,6 +28,13 @@ body {
 }
 
 /* Global [End] */
+
+
+
+
+
+
+
 /* Camera styles [Start] */
 main {
   width: 100%;
@@ -33,17 +42,13 @@ main {
 }
 
 main .container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include center-x-y;
   width: 100%;
   height: 100%;
 }
 
 .camera {
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
+  user-select: none;
 }
 
 .camera-body {
@@ -72,6 +77,7 @@ main .container {
     scale: 0.6 0.6;
   }
 }
+
 .camera-body .point {
   position: absolute;
   left: 80px;
@@ -95,9 +101,7 @@ main .container {
   border: solid 8px #39495c;
   width: 240px;
   aspect-ratio: 1/1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include center-x-y;
   border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -118,7 +122,7 @@ main .container {
   -o-border-radius: inherit;
   z-index: 1;
   border: solid 112px red;
-  border-color: rgba(173, 183, 193, 0.4352941176) rgba(36, 47, 60, 0.4352941176) rgba(36, 47, 60, 0.4352941176) rgba(173, 183, 193, 0.4352941176);
+  border-color: #adb7c16f #242f3c6f #242f3c6f #adb7c16f;
 }
 
 .camera-body .camera-lens .inner-lens {
@@ -131,9 +135,7 @@ main .container {
   -moz-border-radius: inherit;
   -ms-border-radius: inherit;
   -o-border-radius: inherit;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include center-x-y;
 }
 
 .camera-body .camera-lens .inner-lens .inner-inner-lens {
@@ -167,7 +169,20 @@ main .container {
   top: 50%;
   width: 160px;
   height: 60px;
-  background: linear-gradient(to bottom, #c52c77 0, #c52c77 16.3%, #db9038 16.3%, #db9038 33.6%, #f7c945 33.6%, #f7c945 50.4%, #dfe37c 50.4%, #dfe37c 67.2%, #5b9f42 67.2%, #5b9f42 84%, #3887bd 84%, #3887bd 100%);
+  background: linear-gradient(to bottom,
+      /* Increased by 16.3 for 6 colors*/
+      #c52c77 0,
+      #c52c77 16.3%,
+      #db9038 16.3%,
+      #db9038 33.6%,
+      #f7c945 33.6%,
+      #f7c945 50.4%,
+      #dfe37c 50.4%,
+      #dfe37c 67.2%,
+      #5b9f42 67.2%,
+      #5b9f42 84%,
+      #3887bd 84%,
+      #3887bd 100%);
   translate: 0 -50%;
 }
 
@@ -185,11 +200,7 @@ main .container {
   -ms-border-radius: 8px 8px 0 0;
   -o-border-radius: 8px 8px 0 0;
   z-index: -1;
-  transition: top 0.3s 0s;
-  -webkit-transition: top 0.3s 0s;
-  -moz-transition: top 0.3s 0s;
-  -ms-transition: top 0.3s 0s;
-  -o-transition: top 0.3s 0s;
+  @include transition(top, 0.3s)
 }
 
 .camera-body .camera-bar.active {
@@ -223,11 +234,7 @@ main .container {
   -ms-border-radius: 20px 20px 0 0;
   -o-border-radius: 20px 20px 0 0;
   cursor: pointer;
-  transition: top 0.1s 0s;
-  -webkit-transition: top 0.1s 0s;
-  -moz-transition: top 0.1s 0s;
-  -ms-transition: top 0.1s 0s;
-  -o-transition: top 0.1s 0s;
+  @include transition(top, 0.1s);
 }
 
 .camera-body .hand-emoji {
@@ -260,12 +267,14 @@ main .container {
     top: -60px;
     left: 80px;
   }
+
   .camera-body .msg {
     font-size: 28px;
     width: 400px;
     top: -100px;
   }
 }
+
 .overlay {
   position: fixed;
   top: 0;
@@ -296,18 +305,26 @@ main .container {
   }
 }
 /* Camera styles [End] */
+
+
+
+
+
+
 /* Keyframes [Start] */
 @keyframes flash {
   from {
     opacity: 1;
   }
+
   to {
     opacity: 0;
   }
 }
+
 @keyframes hide-after-time {
   to {
     visibility: hidden;
   }
 }
-/* Keyframes [End] *//*# sourceMappingURL=style.css.map */
+/* Keyframes [End] */
