--- a/style.css
+++ b/style.css
@@ -50,11 +50,10 @@ main .container {
   background-color: #fff;
   width: 530px;
   height: 330px;
-  border-radius: 50px;
   -webkit-border-radius: 50px;
   -moz-border-radius: 50px;
-  -ms-border-radius: 50px;
   -o-border-radius: 50px;
+  -ms-border-radius: 50px;
   box-shadow: 13px 13px 0 #aadff7;
   position: relative;
 }
@@ -79,11 +78,10 @@ main .container {
   width: 20px;
   aspect-ratio: 1/1;
   background-color: #242f3c;
-  border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
   -o-border-radius: 50%;
+  -ms-border-radius: 50%;
 }
 
 .camera-body .camera-lens {
@@ -98,11 +96,10 @@ main .container {
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
   -o-border-radius: 50%;
+  -ms-border-radius: 50%;
   z-index: 2;
 }
 
@@ -111,11 +108,10 @@ main .container {
   top: 0;
   width: 0;
   translate: -50% 0;
-  border-radius: inherit;
   -webkit-border-radius: inherit;
   -moz-border-radius: inherit;
-  -ms-border-radius: inherit;
   -o-border-radius: inherit;
+  -ms-border-radius: inherit;
   z-index: 1;
   border: solid 112px red;
   border-color: rgba(173, 183, 193, 0.4352941176) rgba(36, 47, 60, 0.4352941176) rgba(36, 47, 60, 0.4352941176) rgba(173, 183, 193, 0.4352941176);
@@ -126,11 +122,10 @@ main .container {
   border: solid 12px #41546a;
   width: 78%;
   height: 78%;
-  border-radius: inherit;
   -webkit-border-radius: inherit;
   -moz-border-radius: inherit;
-  -ms-border-radius: inherit;
   -o-border-radius: inherit;
+  -ms-border-radius: inherit;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -140,11 +135,10 @@ main .container {
   background-color: #242f3c;
   width: 60%;
   height: 60%;
-  border-radius: inherit;
   -webkit-border-radius: inherit;
   -moz-border-radius: inherit;
-  -ms-border-radius: inherit;
   -o-border-radius: inherit;
+  -ms-border-radius: inherit;
   position: relative;
 }
 
@@ -154,11 +148,10 @@ main .container {
   width: 24px;
   aspect-ratio: 1/1;
   background-color: #454e59;
-  border-radius: inherit;
   -webkit-border-radius: inherit;
   -moz-border-radius: inherit;
-  -ms-border-radius: inherit;
   -o-border-radius: inherit;
+  -ms-border-radius: inherit;
 }
 
 .camera-body .colored-label {
@@ -179,12 +172,11 @@ main .container {
   translate: -50% 0;
   left: 50%;
   top: 0;
-  border-radius: 8px 8px 0 0;
+  z-index: -1;
   -webkit-border-radius: 8px 8px 0 0;
   -moz-border-radius: 8px 8px 0 0;
-  -ms-border-radius: 8px 8px 0 0;
   -o-border-radius: 8px 8px 0 0;
-  z-index: -1;
+  -ms-border-radius: 8px 8px 0 0;
   transition: top 0.3s 0s;
   -webkit-transition: top 0.3s 0s;
   -moz-transition: top 0.3s 0s;
@@ -203,11 +195,10 @@ main .container {
   height: 76%;
   translate: -50% -50%;
   background-color: #7c96b1;
-  border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
   -o-border-radius: 10px;
+  -ms-border-radius: 10px;
 }
 
 .camera-body .camera-button {
@@ -217,12 +208,11 @@ main .container {
   background-color: #bb354d;
   width: 50px;
   height: 6px;
-  border-radius: 20px 20px 0 0;
+  cursor: pointer;
   -webkit-border-radius: 20px 20px 0 0;
   -moz-border-radius: 20px 20px 0 0;
-  -ms-border-radius: 20px 20px 0 0;
   -o-border-radius: 20px 20px 0 0;
-  cursor: pointer;
+  -ms-border-radius: 20px 20px 0 0;
   transition: top 0.1s 0s;
   -webkit-transition: top 0.1s 0s;
   -moz-transition: top 0.1s 0s;
@@ -238,8 +228,10 @@ main .container {
   display: block;
   font-size: 26px;
   letter-spacing: -0.5px;
-  animation: hide-after-time 0.3s 4s forwards;
   -webkit-animation: hide-after-time 0.3s 4s forwards;
+  -moz-animation: hide-after-time 0.3s 4s forwards;
+  -o-animation: hide-after-time 0.3s 4s forwards;
+  -ms-animation: hide-after-time 0.3s 4s forwards;
 }
 
 .camera-body .msg {
@@ -250,8 +242,10 @@ main .container {
   color: #252525;
   font-size: 20px;
   letter-spacing: -0.5px;
-  animation: hide-after-time 0.3s 4s forwards;
   -webkit-animation: hide-after-time 0.3s 4s forwards;
+  -moz-animation: hide-after-time 0.3s 4s forwards;
+  -o-animation: hide-after-time 0.3s 4s forwards;
+  -ms-animation: hide-after-time 0.3s 4s forwards;
 }
 
 @media (max-width: 768px) {
@@ -275,8 +269,10 @@ main .container {
   background-color: #fff;
   z-index: 1000;
   display: none;
-  animation: flash 0.5s 0.1s linear;
   -webkit-animation: flash 0.5s 0.1s linear;
+  -moz-animation: flash 0.5s 0.1s linear;
+  -o-animation: flash 0.5s 0.1s linear;
+  -ms-animation: flash 0.5s 0.1s linear;
 }
 
 .emoji {
